# c-its

./: .gitignore  192.168.0-metadata.json  save
domain_bridge/: 192.168.0-metadata.json
domain_bridge/config/: bridge_config.yaml
domain_bridge/examples/: bridge_config.yaml
domain_bridge/install/: local_setup.sh  setup.sh
domain_bridge/install/domain_bridge/lib/domain_bridge/: domain_bridge  test_component
domain_bridge/install/domain_bridge/share/domain_bridge/: package.sh
domain_bridge/install/domain_bridge/share/domain_bridge/examples/: bridge_config.yaml  test_bridge_config.yaml
domain_bridge/log/: latest_build
domain_bridge_jazzy/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
domain_bridge_jazzy/install/domain_bridge/lib/domain_bridge/: domain_bridge  test_component
domain_bridge_jazzy/install/domain_bridge/share/domain_bridge/: local_setup.sh  package.ps1  package.sh
domain_bridge_jazzy/install/domain_bridge/share/domain_bridge/environment/: path.sh  (+1 more)
domain_bridge_jazzy/log/: latest_build
ldm-dashboard/: README.md  index.html  package-lock.json  package.json  run-dashboard.sh
ldm-dashboard/src/: index.css
ldm-dashboard/src/components/: LDMMap.jsx  ParkingOccupancyGauge.jsx
ldm-dashboard/src/context/: LDMContext.jsx
ros_v2X_apps_humble/dev_ws/install/: local_setup.sh  setup.sh
ros_v2X_apps_humble/dev_ws/log/: latest_build
ros_v2x_apps/: README.md
ros_v2x_apps/.devcontainer/: Dockerfile
ros_v2x_apps/dev_ws/src/v2x_apps/: README.md  package.xml  setup.py
ros_v2x_apps/dev_ws/src/v2x_apps/v2x_apps/: cpm_listener.py  cpm_provider.py  ldm_server.py  poim_listener.py  poim_pa_codec.py  poim_pa_listener.py  poim_pa_provider.py  poim_provider.py
ros_v2x_apps/dev_ws/src/v2x_apps/v2x_apps/asn1/: POIM-PA-Standalone.asn  POIM-ParkingAvailability.asn
ros_v2x_apps/dev_ws/src/v2x_apps/www/: README.md  map.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ros_v2x_apps/dev_ws/src/v2x_apps/www/src/: App.jsx  main.jsx
ros_v2x_apps/dev_ws/src/v2x_apps/www/src/components/: LDMMap.jsx  ParkingInfoPanel.jsx
ros_v2x_apps/dev_ws/src/v2x_apps/www/src/context/: LDMContext.jsx
ros_v2x_apps_jazzy/: Dockerfile  POIM_README.md  README.md
ros_v2x_apps_jazzy/.devcontainer/: Dockerfile  devcontainer.json
ros_v2x_apps_jazzy/dev_ws/src/v2x_apps/: package.xml  setup.py
ros_v2x_apps_jazzy/dev_ws/src/v2x_apps/c2c/: stationary_vehicle_trigger.py
ros_v2x_apps_jazzy/dev_ws/src/v2x_apps/v2x_apps/: cpm_bridge.py  poim_listener.py  poim_provider.py
ros_v2x_apps_jazzy/dev_ws/src/v2x_apps/v2x_apps/asn1/: poim_ts103916.asn
rosbag2_2026_04_28-11_16_32/: metadata.yaml
(+20 files in other folders)
