<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>v2x_apps</name>
  <version>1.0.0</version>
  <description>Collection of V2X applications utilizing cube devices</description>
  <author email="apostolos.georgiadis@nfiniity.com">Apostolos Georgiadis</author>
  <maintainer  email="apostolos.georgiadis@nfiniity.com">Apostolos Georgiadis</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>std_msgs</depend>
  <depend>vanetza_msgs</depend>
  <depend>python3-fastapi</depend>
  <depend>python3-uvicorn</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
